GNOME Bugzilla – Bug 663203
colorspace: fix r210 writing only half a scanline
Last modified: 2011-11-07 18:39:19 UTC
Created attachment 200461 [details] [review] colorspace: fix r210 writing only half a scanline
commit d0443cfb65220e6b2c8aa4e658e114c9e18995ca Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Tue Nov 1 20:37:17 2011 +0000 colorspace: fix r210 writing only half a scanline https://bugzilla.gnome.org/show_bug.cgi?id=663203