colorspace: fix r210 writing only half a scanline

https://bugzilla.gnome.org/show_bug.cgi?id=663203